--- a/.gitignore
+++ b/.gitignore
@@ -23,9 +23,10 @@
 target/
 
 #Eclipse files
-**/.project
-**/.classpath
-**/.settings/
+#**/.project
+#**/.classpath
+#**/.settings/
+
 /bin/
 blog/bin/
 **/.tern-project
@@ -35,6 +36,6 @@ blog/bin/
 **/.idea
 **/.gradle
 
-
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
+/.metadata/
