--- a/relashionship-employee/src/main/resources/application.yml
+++ b/relashionship-employee/src/main/resources/application.yml
@@ -1,9 +1,9 @@
 spring:
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://localhost:3306/db_employee?useTimezone=true&serverTimezone=UTC
+    url: jdbc:mysql://localhost:3307/db_employee?useTimezone=true&serverTimezone=UTC
     username: root
-    password: <password here>
+    password: root
   jpa:
     hibernate:
       ddl-auto: update
